--- a/less/about.less
+++ b/less/about.less
@@ -172,10 +172,10 @@
       // contact section
       .contact {
         // background: rgb(83, 195, 197);
-        margin-top: 35vw;
-        margin-bottom: 10rem;
+        margin: 5vw 0;
+        // margin-bottom: 10rem;
         @media @mobile{
-          margin-bottom: 5rem;
+          // margin-bottom: 5rem;
         }
         width: 100%;
         h1{
@@ -229,7 +229,7 @@
             line-height: 1.5rem;
             border: 1.5px solid #fff;
             margin-top: 1rem;
-            height: 40vh;
+            height: 33vw;
             padding: .5rem;
             &:focus{
               color: #666;
